# cassia

./: .gitignore  README.md  pyproject.toml
cassia/: .__main__.py.un~  .cassia_diary.txt.un~  __init__.py  __main__.py  __main__.py~  analysis.py  backup.txt  cassia.db  cassia_diary.txt  cassia_diary.txt~  config.py  embedding.py  entries.py  lexing.py  migration.md  readwrite.py  reports.py  todo  tools.py
cassia/actions/: __init__.py  create.py  delete.py  inject.py  list.py  print_recent.py  reports.py
cassia/old/: analysis.py  cassia_diary.txt  reports.py  tools.py
