[tool.poetry]
name = "cassia"
version = "0.1.0"
description = ""
authors = ["Oscar Laird <olaird25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fuzzywuzzy = "^0.18.0"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
sqlalchemy = "^2.0.16"
sqlite-web = "^0.4.1"
prompt-toolkit = "^3.0.38"
questionary = "^1.10.0"


[tool.poetry.group.dev.dependencies]
sqlite-web = "^0.4.1"
datasette = "^0.64.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
